# rmtree

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  excluded
doc/: CMakeLists.txt  Makefile  rmtree.1
src/: CMakeLists.txt  Makefile  rmtree.cpp
